Chapter 6 - Creating MVC Applications

--- a/TicTacToe/Localization/Views/Home.Index.fr.resx
+++ b/TicTacToe/Localization/Views/Home.Index.fr.resx
@@ -117,7 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Title" xml:space="preserve">
-    <value>Bienvenue sur le jeu du Morpion!</value>
+  <data name="DesktopTitle" xml:space="preserve">
+    <value>Bienvenue sur le jeu du Morpion sur ordinateur !</value>
+  </data>
+  <data name="MobileTitle" xml:space="preserve">
+    <value>Bienvenue sur le jeu du Morpion sur mobile !</value>
   </data>
 </root>
