--- a/TicTacToe/Localization/Views/UserRegistration.Index.fr.resx
+++ b/TicTacToe/Localization/Views/UserRegistration.Index.fr.resx
@@ -117,10 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="SubTitle" xml:space="preserve">
-    <value>Fiche Utilisateur</value>
-  </data>
-  <data name="Title" xml:space="preserve">
+  <data name="DesktopTitle" xml:space="preserve">
     <value>Inscription de l'utilisateur</value>
+  </data>
+  <data name="MobileTitle" xml:space="preserve">
+    <value>Inscription de l'utilisateur</value>
+  </data>
+  <data name="SubTitle" xml:space="preserve">
+    <value>Fiche utilisateur</value>
   </data>
 </root>
