--- a/TicTacToe/Localization/Views/UserRegistration.EmailConfirmation.resx
+++ b/TicTacToe/Localization/Views/UserRegistration.EmailConfirmation.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="DesktopTitle" xml:space="preserve">
-    <value>Confirmation de l'enregistrement utilisateur</value>
+    <value>User Registration Confirmation</value>
   </data>
   <data name="MobileTitle" xml:space="preserve">
-    <value>Confirmation de l'enregistrement utilisateur</value>
+    <value>User Registration Confirmation</value>
   </data>
 </root>
